# Ananta.Project

./: .env.example  .gitignore  CHANGES_PROFILING_SLASH_COMMAND.md  DEPLOY.md  PROFILING_SLASH_COMMAND_SETUP.md  README-AI-AGENT-OPENAI.md  README-AI-GPT-FIX.md  README-BOT-FIX-BLOK.md  README-BOT-STEP1.md  README-BOT-STEP10-REPORT.md  README-BOT-STEP11-INSIGHT.md  README-BOT-STEP1b.md  README-BOT-STEP2-MULTIUSER.md  README-BOT-STEP3-PENGELUARAN.md  README-BOT-STEP4-KONTAK.md  README-BOT-STEP5-KASBON.md  README-BOT-STEP6-BAYAR.md  README-BOT-STEP7-PENGADAAN.md  README-BOT-STEP8-JUAL.md  README-CI-DEPLOY.md  README.md  STATUS.md  TUTORIAL.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  pyproject.toml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml  railway.json
backend/alembic/: env.py
backend/app/: deps.py  import_history.py  import_master_data.py  main.py  reset_transactions.py  seed_asf.py  seed_extras.py  seed_history.py  seed_master.py  seed_period_lock.py  seed_recon.py  seed_reset_token.py
backend/app/bot/: application.py  handlers.py  insights.py  parsing.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  ai_chat.py  audit.py  base.py  company.py  courier.py  expense.py  investor.py  invoice.py  orders.py  purchase.py  user.py  (+4 more)
backend/bot/: __init__.py  handlers.py
backend/migrations/: ai_chat.sql  scheduler.sql  telegram_step2_linkcode.sql
backend/tests/: test_bill_posting.py  test_bot_parsing.py  test_product_service.py  test_profiling_slash_command.py
(+175 files in other folders)
