[project]
name = "ananta-api"
version = "0.1.0"
description = "Ananta — Business & Accounting API"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.136,<0.137",
  "uvicorn[standard]>=0.34",
  "gunicorn>=23.0",
  "pydantic>=2.10,<3",
  "email-validator>=2.2",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0,<2.1",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "argon2-cffi>=23.1",
  "pyjwt>=2.10",
  "redis>=5.2",
  "python-multipart>=0.0.20",
  "httpx>=0.28",
  "python-telegram-bot>=21,<22",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
